airspeed velocity basic config

--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,10 @@ bcolz
 bquery/benchmarks/vb_suite/benchmarks.db
 bquery/benchmarks/vb_suite/source
 
+# airspeed velocity
+bquery/benchmarks/asv_suite/results
+bquery/benchmarks/asv_suite/env
+bquery/benchmarks/asv_suite/bquery
+
 # Pycharm
 .idea
